--- a/result.html
+++ b/result.html
@@ -6,11 +6,26 @@
 <link rel="stylesheet" href="css/result.css">
 </head>
 <body>
+  
+    <div class="page">
+    <div class="topbar">
+    <div class="logo">QuizMaster</div>
+    <div class="nav-links">
+    <a href="selection.html">Home</a>
+    <a href="qupanel.html">Quiz Panel</a>
+    <a href="result.html">Result Page</a>
+    <a href="proogress.html">Progress Bar Section</a>
+    </div>
+    <div class="user-area">
+        <span>Guest User</span>
+        <a href="index.html"><button class="logout-btn">Logout</button></a>
+    </div>
+</div>
 
 <div class="result-card">
 
     <h1 class="title">Quiz Result</h1>
-    <p class="subtitle">Congratulations! You have completed the quiz 🎉</p>
+    <p class="subtitle">Congratulations! You have completed the quiz </p>
 
     <!-- Score Circle -->
     <div class="score-circle">
@@ -47,6 +62,7 @@
         <a href="selection.html" class="secondary">Home</a>
     </div>
 
+</div>
 </div>
 
 </body>
