--- a/selection.html
+++ b/selection.html
@@ -10,9 +10,15 @@
 <!-- Top Bar -->
 <div class="topbar">
     <div class="logo">QuizMaster</div>
+    <div class="nav-links">
+    <a href="selection.html">Home</a>
+    <a href="qupanel.html">Quiz Panel</a>
+    <a href="result.html">Result Page</a>
+    <a href="proogress.html">Progress Bar Section</a>
+    </div>
     <div class="user-area">
         <span>Guest User</span>
-        <button class="logout-btn">Logout</button>
+        <a href="index.html"><button class="logout-btn">Logout</button></a>
     </div>
 </div>
 
