--- a/qupanel.html
+++ b/qupanel.html
@@ -75,7 +75,7 @@
 
   <div class="nav">
     <label for="q2" class="prev-btn">Previous</label>
-    <button class="submit-btn">Submit</button>
+   <a href="result.html"><button class="submit-btn">Submit</button></a>
   </div>
 </div>
 
