--- a/instruction.html
+++ b/instruction.html
@@ -53,6 +53,21 @@
 </head>
 <body>
 
+  <div class="topbar">
+    <div class="logo">QuizMaster</div>
+    <div class="nav-links">
+    <a href="selection.html">Home</a>
+    <a href="qupanel.html">Quiz Panel</a>
+    <a href="result.html">Result Page</a>
+    <a href="proogress.html">Progress Bar Section</a>
+    </div>
+    <div class="user-area">
+        <span>Guest User</span>
+        <a href="index.html"><button class="logout-btn">Logout</button></a>
+    </div>
+</div>
+
+
 <div class="instruction-wrapper">
   <div class="instruction-card">
     <h2>Quiz Instructions</h2>
