--- a/instruction.html
+++ b/instruction.html
@@ -67,8 +67,8 @@
     </div>
 </div>
 
-
-<div class="instruction-wrapper">
+<div class="page">
+<div class="instruction-wrapper ">
   <div class="instruction-card">
     <h2>Quiz Instructions</h2>
     <p class="subtitle">Read carefully before starting</p>
@@ -102,6 +102,7 @@
 
     <a href="qupanel.html"><button class="start-btn">Start Quiz</button></a>
   </div>
+</div>
 </div>
 
 </body>
