--- a/result.html
+++ b/result.html
@@ -65,5 +65,17 @@
 </div>
 </div>
 
+<!-- Footer -->
+<footer class="footer">
+    <div class="footer-content">
+        <p>© 2026 QuizMaster. All Rights Reserved.</p>
+        <div class="footer-links">
+            <a href="#">About</a>
+            <a href="#">Help</a>
+            <a href="#">Privacy Policy</a>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
