--- a/selection.html
+++ b/selection.html
@@ -30,14 +30,14 @@
     <div class="box">
         <h3>Choose Topic</h3>
         <div class="option-grid">
-            <div class="option-card" data-value="GK">HTML</div>
-            <div class="option-card" data-value="Science">CSS</div>
-            <div class="option-card" data-value="History">JAVA</div>
-            <div class="option-card" data-value="Geography">JAVA SCRIPT</div>
-            <div class="option-card" data-value="Literature">PHP</div>
-            <div class="option-card" data-value="Music">PYTHON</div>
-            <div class="option-card" data-value="Art">C#</div>
-            <div class="option-card" data-value="Sports">DBMS</div>
+           <div class="option-card" data-value="HTML">HTML</div>
+            <div class="option-card" data-value="CSS">CSS</div>
+            <div class="option-card" data-value="JAVA">JAVA</div>
+            <div class="option-card" data-value="JAVA SCRIPT">JAVA SCRIPT</div>
+            <div class="option-card" data-value="PHP">PHP</div>
+            <div class="option-card" data-value="PYTHON">PYTHON</div>
+            <div class="option-card" data-value="C#">C#</div>
+            <div class="option-card" data-value="DBMS">DBMS</div>
         </div>
     </div>
 
@@ -57,6 +57,17 @@
     </div>
 </div>
 
-<!-- <script src="js/selection.js"></script> -->
+<!-- Footer -->
+<footer class="footer">
+    <div class="footer-content">
+        <p>© 2026 QuizMaster. All Rights Reserved.</p>
+        <div class="footer-links">
+            <a href="#">About</a>
+            <a href="#">Help</a>
+            <a href="#">Privacy Policy</a>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
