--- a/qupanel.html
+++ b/qupanel.html
@@ -134,11 +134,11 @@ document.getElementById("q3").addEventListener("change", () => {
   <label class="option"><input type="radio" name="a3"> HTML</label>
   <label class="option"><input type="radio" name="a3"> C</label>
 
-  <div class="nav">
-    <label for="q2" class="prev-btn">Previous</label>
-   <a href="result.html"><button class="submit-btn">Submit</button></a>
-  </div>
+  <div class="btn-group">
+  <button class="prev-btn" type="button">Previous</button>
+  <a href="result.html" class="submit-btn">Submit</a>
 </div>
+
 
 </div>
 </div>
