--- a/result.html
+++ b/result.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" href="css/result.css">
 </head>
 <body>
+    <div class="layout">
   
-    <div class="page">
     <div class="topbar">
     <div class="logo">QuizMaster</div>
     <div class="nav-links">
@@ -22,6 +22,7 @@
     </div>
 </div>
 
+<main class="content">
 <div class="result-card">
 
     <h1 class="title">Quiz Result</h1>
@@ -63,7 +64,7 @@
     </div>
 
 </div>
-</div>
+</main>
 
 <!-- Footer -->
 <footer class="footer">
@@ -77,5 +78,6 @@
     </div>
 </footer>
 
+</div>
 </body>
 </html>
