--- a/sign_in.html
+++ b/sign_in.html
@@ -5,6 +5,37 @@
 <title>Sign In</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
+
+<script>
+function signin() {
+    let email = document.getElementById("email").value.trim();
+    let password = document.getElementById("password").value.trim();
+
+    let storedEmail = localStorage.getItem("email");
+    let storedPassword = localStorage.getItem("password");
+
+    // 1Empty field validation
+    if (email === "" || password === "") {
+        alert("Please enter email or password");
+        return; // stop execution
+    }
+
+    // Check if user has signed up
+    if (!storedEmail || !storedPassword) {
+        alert("Please enter valid email or passworrd!");
+        return;
+    }
+
+    // Check credentials
+    if (email === storedEmail && password === storedPassword) {
+        alert("Login successful!");
+        window.location.href = "selection.html";
+    } else {
+        alert("Invalid email or password");
+    }
+}
+</script>
+
 <body>
 
 <div class="container">
@@ -12,10 +43,10 @@
         <h1>Sign In</h1>
         <p class="subtitle">Enter your credentials to continue</p>
 
-        <input type="email" class="input" placeholder="Email" required>
-        <input type="password" class="input" placeholder="Password" required>
+        <input type="email" id="email" class="input" placeholder="Email" required>
+        <input type="password" id="password" class="input" placeholder="Password" required>
 
-        <a href="selection.html"><button class="btn primary">Sign In</button></a>
+        <button class="btn primary" onclick="signin()">Sign In</button>
 
         <!-- Create Account as Text Link -->
         <p class="link-text">
