--- a/selection.html
+++ b/selection.html
@@ -19,7 +19,7 @@
     </div>
     <div class="user-area">
         <span>Guest User</span>
-        <a href="qupanel.html" class="start-btn">Start Quiz</a>
+        <a href="index.html" class="logout-btn">logout</a>
     </div>
 </div>
 
